# hs-graphql

./: .gitignore  LICENSE  README.md  hs-graphql.cabal  stack.yaml
.github/workflows/: test.yml
dist-newstyle/cache/: compiler  config
src/GraphQL/: AST.hs  Class.hs  Error.hs  Internal.hs  Kinds.hs  Parser.hs  Resolution.hs  Response.hs  Schema.hs  Selection.hs  TypeSystem.hs  Typeable.hs  Types.hs
src/GraphQL/AST/: Document.hs  Lexer.hs  Parser.hs  Validation.hs  Visitor.hs
src/GraphQL/IO/: Input.hs  Kinds.hs  Output.hs
src/GraphQL/Parser/: Lexer.hs  Parser.hs  Types.hs  Validation.hs
src/GraphQL/Resolver/: Input.hs  Output.hs
src/GraphQL/Schema/: Class.hs  Generic.hs  Main.hs  Types.hs
src/GraphQL/TypeSystem/: Introspection.hs  Main.hs  TypeDefs.hs  X.hs
test/Examples/: BasicSpec.hs  EnumSpec.hs  InputSpec.hs  ObjectSpec.hs  SelectionSpec.hs  UnionSpec.hs
test/Test/: Utils.hs
test/Test/GraphQL/: ASTSpec.hs  ParserSpec.hs  ResolutionSpec.hs
test/Test/GraphQL/AST/: ParserSpec.hs
test/Test/GraphQL/Schema/: EnumSpec.hs  InputSpec.hs  ObjectSpec.hs  UnionSpec.hs
test/Test/GraphQL/TypeSystem/: EnumSpec.hs  InputSpec.hs  ObjectSpec.hs  UnionSpec.hs
test/queries/: bad_input_undefined_variable.graphql  bad_selection_duplicated_fragment_names.graphql  bad_selection_duplicated_operation_names.graphql  bad_selection_fragment_cycle.graphql  bad_selection_missing_operation.graphql  bad_selection_multiple_unnamed_operations.graphql  bad_selection_unused_fragment.graphql  good_input.graphql  good_selection.graphql  good_selection_multiple_named_operations.graphql
