name:                hs-graphql
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hs-graphql#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    GraphQL.Class
    GraphQL.Internal
    GraphQL.Types
    GraphQL.Selection
    GraphQL.Resolution
    GraphQL.IO.Kinds
    GraphQL.IO.Input
    GraphQL.IO.Output
  default-language:    Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , aeson
    , containers
    , data-fix
    , mtl
    , recursion-schemes
    , row-types
    , text
    , unordered-containers
    , vector

test-suite hs-graphql-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
      base >=4.12.0.0 && <4.16
    , hspec
    , hspec-discover
    , hs-graphql
    , aeson
    , data-fix
    , recursion-schemes

source-repository head
  type:     git
  location: https://github.com/githubuser/hs-graphql
