name:                hs-graphql
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hs-graphql#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    GraphQL.Response
    GraphQL.Internal
    GraphQL.Types
    GraphQL.Selection
    GraphQL.TypeSystem
    GraphQL.TypeSystem.Main
    GraphQL.TypeSystem.TypeDefs
    GraphQL.IO.Input
    GraphQL.IO.Output
    GraphQL.AST
    GraphQL.AST.Parser
    GraphQL.AST.Lexer
    GraphQL.AST.Document
    GraphQL.AST.Validation
    GraphQL.AST.Visitor
  default-language:    Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , aeson
    , containers
    , data-fix
    , free
    , mtl
    , recursion-schemes
    , row-types
    , text
    , unordered-containers
    , vector
    , megaparsec
    , parser-combinators >=1.0 && <2.0
    , scientific
    , profunctors

test-suite hs-graphql-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-tool-depends:  hspec-discover:hspec-discover
  build-depends:
      base >= 4.7 && < 5
    , hspec
    , hs-graphql
    , free
    , aeson
    , data-fix
    , recursion-schemes
    , text
    , unordered-containers
    , megaparsec

source-repository head
  type:     git
  location: https://github.com/githubuser/hs-graphql
